# ElaboratoMatrixTemplateKondji

./: CMakeLists.txt  MatrixTemplate.cpp  MatrixTemplate.h  README  UtilsMatrixTemplate.h  main.cpp  matrix_operations.h
test/: CMakeLists.txt  MatrixTemplateTests.cpp  runAllTests.cpp
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/docs/: FAQ.md
